<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fcfcfc"
    tools:context="com.skyfree.magiclookscreen.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@drawable/background"
            android:baselineAligned="false"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleMarginStart="20dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="@string/app_name">

            <ImageView
                android:id="@+id/main_image_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:background="@drawable/circle_background_white"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:src="@mipmap/ic_power_orange" />

            <Switch
                android:id="@+id/main_switch_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:background="@color/backgroundcolor"
            android:gravity="center"
            android:id="@+id/ll">

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/main_card_double_tap"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:alpha="0.5"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/main_image_double_tap"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circle_background_purple_white"
                            android:padding="10dp"
                            android:src="@drawable/ic_touch_app_purple_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/double_tap_btn"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/double_tap_info"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/main_card_floating_popup"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:alpha="0.5"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/main_image_floating_popup"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circle_background_pink_white"
                            android:padding="10dp"
                            android:src="@drawable/ic_lightbulb_outline_black_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/floating_popup_btn"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/floating_popup_info"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/main_card_create_shortcut"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:alpha="0.5"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/main_image_create_shortcut"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circle_background_green_white"
                            android:padding="10dp"
                            android:src="@drawable/ic_control_point_black_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/create_shortcut_btn"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/create_shortcut_info"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/main_card_vibrate"
                    android:layout_width="160dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:alpha="0.5"
                    >
                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/main_image_vibrate"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circle_background_yello_white"
                            android:padding="10dp"
                            android:src="@drawable/ic_vibration_black_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/vibrate_btn"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/vibrate_info"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>

            <LinearLayout
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/main_card_except_app"
                    android:layout_width="340dp"
                    android:layout_height="190dp"
                    android:layout_margin="10dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:alpha="0.5">

                    <LinearLayout
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/main_image_except_app"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:background="@drawable/circle_background_blue_white"
                            android:padding="10dp"
                            android:src="@drawable/ic_apps_black_24dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/except_app_btn"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/lightgray"
                            android:layout_margin="10dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:padding="5dp"
                            android:text="@string/except_app_info"
                            android:textColor="@android:color/darker_gray" />


                    </LinearLayout>


                </android.support.v7.widget.CardView>


            </LinearLayout>




        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
